force-app/main/default/objects/Trip_Date_Netchex__c/Trip_Date_Netchex__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Date Settings :- Example yyyy-mm-dd 2018-07-31
If you want to post a call for a salary type account or other driver then select checkbox to true.
If you want to part time and full time driver then deselect a checkbox.</description>
    <label>Trip Date Netchex</label>
</CustomObject>