force-app/main/default/objects/Trip_Date_Netchex__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salary</label>
    <type>Checkbox</type>
</CustomField>