force-app/main/default/objects/Trip_Date_Netchex__c/fields/Trip_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trip_End_Date__c</fullName>
    <label>Trip End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>